Enable native access for JavaFX modules